@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171111"
-#define public MagickPackageReleaseDate "snapshot-20171111"
+#define public MagickPackageVersionAddendum ".020171112"
+#define public MagickPackageReleaseDate "snapshot-20171112"
